feat: Melhorias e otimizações na plataforma Delta Navigator
- Performance: Otimização de componentes Statement e gráficos (+60-80% performance)
- UI/UX: Redesign visual da tela de extrato com paleta corporativa
- Nova Sidebar: Sidebar melhorada com expand/collapse e responsividade
- Novos Componentes: CadastralV2, ComparativoPosicaoContratos, LicitacoesV2
- IUGU Server: Novo servidor backend com endpoints de boletos bancários
- Documentação: Múltiplas documentações e guias de implementação adicionadas
- Bugfix: Correção de lag e travamentos em tabelas grandes
- Refactor: Limpeza de código e organização de arquivos

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
   "dev": "vite --host 0.0.0.0",
-    "dev:full": "concurrently \"npm run dev\" \"npm run server:sql\" \"npm run server:postgres\" \"npm run server:extrato\"",
+    "dev:full": "concurrently \"npm run dev\" \"npm run server:sql\" \"npm run server:postgres\" \"npm run server:extrato\" \"npm run server:contratos\"",
     "server:sql": "cd server && node server.js",
     "server:postgres": "cd postgres-server && node server.js",
     "server:extrato": "cd extrato-server && node server.js",
-    "servers": "concurrently \"npm run server:sql\" \"npm run server:postgres\" \"npm run server:extrato\"",
+    "server:contratos": "cd contratos-server && node server.js",
+    "servers": "concurrently \"npm run server:sql\" \"npm run server:postgres\" \"npm run server:extrato\" \"npm run server:contratos\"",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
