🔐 chore: Security audit - Remove credentials and implement best practices
- Removed exposed credentials from README.md
- Removed IPs and passwords from .env.example files
- Added comprehensive security documentation
- Implemented pre-commit hooks for prevention

Files modified:
- README.md (safe, no credentials)
- .env.example (placeholders only)
- postgres-server/.env.example (secure)
- iugu-server/.env.example (secure)

New documentation:
- SECURITY_REMEDIATION.md
- SECURITY_AUDIT_REPORT.md
- SECURITY_ACTION_CHECKLIST.md
- pre-commit-check.ps1

IMPORTANT: Revoke exposed credentials immediately!
See SECURITY_ACTION_CHECKLIST.md for next steps.

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,16 @@
 # ========== SUPABASE CONFIGURATION ==========
-VITE_SUPABASE_PROJECT_ID="rrymsnrrjrmbhzihtjlo"
-VITE_SUPABASE_PUBLISHABLE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-VITE_SUPABASE_URL="https://rrymsnrrjrmbhzihtjlo.supabase.co"
-VITE_SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+# ⚠️  IMPORTANTE: Preencha com suas credenciais REAIS
+# Veja https://app.supabase.com/projects
+VITE_SUPABASE_PROJECT_ID=seu_project_id_aqui
+VITE_SUPABASE_PUBLISHABLE_KEY=sua_chave_publica_aqui
+VITE_SUPABASE_URL=https://seu-projeto.supabase.co
+VITE_SUPABASE_ANON_KEY=sua_chave_anonima_aqui
 
 # ========== APP CONFIGURATION ==========
-VITE_APP_URL=http://192.168.8.149
+VITE_APP_URL=http://localhost:5173
 
 # ========== BACKEND APIs (FRONTEND CONFIG) ==========
+# Use localhost para desenvolvimento, URLs seguras em produção
 VITE_API_POSTGRES_URL=http://localhost:3002
 VITE_API_SQLSERVER_URL=http://localhost:3001
 VITE_EXTRATO_API_URL=http://localhost:3003
@@ -15,38 +18,26 @@ VITE_API_CONTRATOS_URL=http://localhost:3004
 VITE_API_IUGU_URL=http://localhost:3005
 
 # ========== DATABASE CONFIGURATION ==========
-# ⚠️  IMPORTANT: These values should match Vault secrets for production
-# For local development only - in production, use Vault
-POSTGRES_HOST=192.168.8.149
+# ⚠️  NUNCA commite credenciais reais aqui!
+# Use .env.local para desenvolvimento
+# Use Vault/Secrets Manager em produção
+POSTGRES_HOST=seu_host_postgres_aqui
 POSTGRES_PORT=5432
-POSTGRES_DATABASE=airflow_treynor
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=MinhaSenh@123
-
-# ========== FALLBACK CONFIGURATION ==========
-PG_HOST=postgres
-PG_PORT=5432
-PG_DB=airflow_treynor
-PG_USER=postgres
-PG_PASSWORD=MinhaSenh@123
-
-# ========== LEGACY CONFIGURATION ==========
-HOST=postgres
-DB=airflow_treynor
-DB_USER=postgres
-PASSWORD=Alx@2024!
+POSTGRES_DATABASE=seu_banco_aqui
+POSTGRES_USER=seu_usuario_postgres_aqui
+POSTGRES_PASSWORD=sua_senha_postgres_aqui
 
 # ========== SQL SERVER (if needed) ==========
-SQLSERVER_HOST=localhost
+SQLSERVER_HOST=seu_host_sqlserver_aqui
 SQLSERVER_PORT=1433
-SQLSERVER_USER=sa
-SQLSERVER_PASSWORD=MinhaSenh@123
-SQLSERVER_DB=master
+SQLSERVER_USER=seu_usuario_sql_aqui
+SQLSERVER_PASSWORD=sua_senha_sql_aqui
+SQLSERVER_DB=seu_banco_sql_aqui
 
 # ========== ENVIRONMENT ==========
 NODE_ENV=development
 
 # ========== VAULT CONFIGURATION ==========
-# For production, Vault will override .env values
+# Para produção, use HashiCorp Vault
 VAULT_ADDR=http://localhost:8200
-VAULT_TOKEN=devtoken
+VAULT_TOKEN=use_seu_token_seguro_aqui
