--- a/iugu-server/.env.example
+++ b/iugu-server/.env.example
@@ -1,5 +1,5 @@
-PG_HOST=10.174.1.117
-PG_PORT=5432
-PG_DB=ntxdeltaglobal
-PG_USER=postgres
-PG_PASSWORD=u8@UWlfV@mT8TjSVtcEJmOTd
+﻿# IUGU API CONFIGURATION
+IUGU_API_KEY=sua_chave_iugu_segura_aqui
+DATABASE_URL=postgresql://seu_usuario:sua_senha@seu_host:5432/seu_banco
+PORT=3005
+NODE_ENV=development
