--- a/postgres-server/.env.example
+++ b/postgres-server/.env.example
@@ -1,6 +1,22 @@
-# PostgreSQL Configuration
-HOST=your_postgres_host
-PORT=5432
-DB=your_database_name
-DB_USER=your_postgres_user
-PASSWORD=your_postgres_password
+# ========== POSTGRESQL CONFIGURATION ==========
+# ??  IMPORTANTE: Configure com suas credenciais REAIS
+# NUNCA commite este arquivo com credenciais reais!
+
+# Host do PostgreSQL
+POSTGRES_HOST=seu_host_postgres_aqui
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=seu_banco_aqui
+POSTGRES_USER=seu_usuario_aqui
+POSTGRES_PASSWORD=sua_senha_segura_aqui
+
+# URL de conexão completa (alternativa)
+DATABASE_URL=postgresql://seu_usuario:sua_senha@seu_host:5432/seu_banco
+
+# Servidor
+PORT=3002
+NODE_ENV=development
+
+# Pool de conexões
+DB_POOL_MIN=2
+DB_POOL_MAX=10
+DB_TIMEOUT=30000
